<resources>
    <string name="app_name">Space Time Tracker App</string>
    <string name="landing_page">SPACE TIME TRACKER</string>
    <string name="action_reservations">Reservations</string>
    <string name="action_arrivals">Arrivals</string>
    <string name="action_departures">Departures</string>
    <string name="action_tracker">Tracker</string>
    <string name="some_date">Display and Filter Reservation!</string>
    <string name="some_hint">Type here to filter&#8230;</string>
    <string name="rerser_package">Package</string>
    <string name="reser_number">Number</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="customer_name">Customer Name</string>
    <string name="topleft">very very very very very very very very very very very text text text</string>
    <string name="topright">Date date arrival</string>
    <string name="bottonleft">Package</string>
    <string name="bottomright">Number</string>
    <string name="departure_date">Departure Date</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="channel">Channel</string>
    <string name="details">Details</string>
</resources>
