<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_reservations"
          android:title="@string/action_reservations"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_arrivals"
          android:title="@string/action_arrivals"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_departures"
          android:title="@string/action_departures"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_tracker"
          android:title="@string/action_tracker"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    // Handle action bar item clicks here. The action bar will
    // automatically handle clicks on the Home/Up button, so long
    // as you specify a parent activity in AndroidManifest.xml.
</menu>
