<RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout" xmlns:android="http://schemas.android.com/apk/res/android">

    <GridLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout_top" android:weightSum="1"
                android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" android:columnCount="2" android:rowCount="1">

        <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:id="@+id/textView_name" android:layout_weight="1"
                android:singleLine="true" android:elegantTextHeight="false" android:editable="false"
                android:layout_marginLeft="25dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rerser_package"
                android:id="@+id/textView_package"
                android:elegantTextHeight="false" android:singleLine="true"
                android:layout_marginRight="25dp" android:layout_marginLeft="50dp" android:layout_weight="1"/>

    </GridLayout>

    <GridLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout_bottom" android:weightSum="1"
                android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                android:layout_marginTop="50dp" android:columnCount="2" android:rowCount="1">

        <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/arrival_date"
                android:id="@+id/textView_arrival" android:layout_weight="1"
                android:singleLine="true" android:elegantTextHeight="false" android:editable="false"
                android:layout_marginLeft="25dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reser_number"
                android:id="@+id/textView_number"
                android:elegantTextHeight="false" android:singleLine="true"
                android:layout_marginRight="25dp" android:layout_marginLeft="50dp" android:layout_weight="1"/>

    </GridLayout>
   <!-- <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/linearLayout_bottom"
                  android:layout_marginTop="80dp"
                  android:layout_alignParentTop="true" android:layout_alignParentStart="true">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bottonleft"
                android:id="@+id/rightTopText1" android:layout_marginLeft="25dp" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottomright"
                android:id="@+id/leftBottomText2" android:paddingLeft="50dp" android:paddingRight="85dp"
                android:singleLine="true"
                android:layout_weight="0" android:layout_marginRight="-10dp"/>

    </LinearLayout>-->
</RelativeLayout>